[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/BO1.tres" type="DynamicFont" id=1]
[ext_resource path="res://Player/HUD/HUD.gd" type="Script" id=2]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_hud" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 510.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/left_hud"]
margin_right = 510.0
margin_bottom = 551.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Health" type="Label" parent="HBoxContainer/left_hud"]
margin_top = 555.0
margin_right = 510.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_hud" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/right_hud"]
margin_right = 253.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/right_hud"]
margin_left = 257.0
margin_right = 510.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/right_hud/VBoxContainer2"]
margin_right = 253.0
margin_bottom = 501.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="primary_ammo" type="Label" parent="HBoxContainer/right_hud/VBoxContainer2"]
margin_top = 505.0
margin_right = 253.0
margin_bottom = 526.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="secondary_ammo" type="Label" parent="HBoxContainer/right_hud/VBoxContainer2"]
margin_top = 530.0
margin_right = 253.0
margin_bottom = 551.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shoulder_ammo" type="Label" parent="HBoxContainer/right_hud/VBoxContainer2"]
margin_top = 555.0
margin_right = 253.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
